--- a/SearchableMaze/SearchableMaze.csproj
+++ b/SearchableMaze/SearchableMaze.csproj
@@ -54,9 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MazeSolutionTranslator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchableMaze.cs" />
+    <Compile Include="SearchableMazeAdpter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
