--- a/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -47,10 +47,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\ap2ex1_server\Core\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\GameOfMazes\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\ap2ex1_server\Core\MazeLib.dll</HintPath>
+      <HintPath>..\..\GameOfMazes\MazeLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
