--- a/SearchableMaze/SearchableMaze.csproj
+++ b/SearchableMaze/SearchableMaze.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Priority Queue, Version=4.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\OptimizedPriorityQueue.4.0.4\lib\net45\Priority Queue.dll</HintPath>
     </Reference>
@@ -44,10 +47,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeLib">
-      <HintPath>..\..\GameOfMazes\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\ap2\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\GameOfMazes\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\ap2\MazeGeneratorLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
