--- a/ap2ex1_server/ap2ex1_server.csproj
+++ b/ap2ex1_server/ap2ex1_server.csproj
@@ -35,9 +35,6 @@
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="SearchableMaze">
-      <HintPath>..\SearchableMaze\bin\Debug\SearchableMaze.exe</HintPath>
-    </Reference>
     <Reference Include="SearchAlgorithmsLib">
       <HintPath>..\SearchAlgorithmsLib\bin\Debug\SearchAlgorithmsLib.dll</HintPath>
     </Reference>
@@ -51,10 +48,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\SearchableMaze\bin\Debug\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\ap2\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\SearchableMaze\bin\Debug\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\..\Desktop\ap2\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Priority Queue">
       <HintPath>..\packages\OptimizedPriorityQueue.4.0.4\lib\net45\Priority Queue.dll</HintPath>
@@ -87,6 +84,10 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <ProjectReference Include="..\SearchableMaze\SearchableMaze.csproj">
+      <Project>{83544628-b070-484d-9153-ed0a6e69d30d}</Project>
+      <Name>SearchableMaze</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SearchAlgorithmsLib\SearchAlgorithmsLib.csproj">
       <Project>{FA9E2983-163E-4F7C-B14C-7FA66BE7A563}</Project>
       <Name>SearchAlgorithmsLib</Name>
