--- a/GUIClient/App.config
+++ b/GUIClient/App.config
@@ -1,15 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="GUIClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <appSettings>
-    <add key="ip" value="127.0.0.1" />
-    <add key="port" value="55555" />
-    <add key="rows" value="5" />
-    <add key="cols" value="5" />
-    <add key="ClientSettingsProvider.ServiceUri" value="" />
-  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -30,4 +28,23 @@
       </providers>
     </roleManager>
   </system.web>
+  <userSettings>
+    <GUIClient.Properties.Settings>
+      <setting name="ServerPort" serializeAs="String">
+        <value>55555</value>
+      </setting>
+      <setting name="ServerIP" serializeAs="String">
+        <value>127.0.0.1</value>
+      </setting>
+      <setting name="rows" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="cols" serializeAs="String">
+        <value>10</value>
+      </setting>
+      <setting name="algo" serializeAs="String">
+        <value>0</value>
+      </setting>
+    </GUIClient.Properties.Settings>
+  </userSettings>
 </configuration>
