--- a/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
+++ b/SearchAlgorithmsLib/SearchAlgorithmsLib.csproj
@@ -50,10 +50,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\..\..\ex1_ver\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeLib.dll</HintPath>
+      <HintPath>..\..\..\ex1_ver\MazeLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
