--- a/SearchableMaze/SearchableMaze.csproj
+++ b/SearchableMaze/SearchableMaze.csproj
@@ -47,10 +47,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeLib.dll</HintPath>
+      <HintPath>..\SearchAlgorithmsLib\bin\Debug\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\SearchAlgorithmsLib\bin\Debug\MazeGeneratorLib.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
