--- a/ap2ex1_server/ap2ex1_server.csproj
+++ b/ap2ex1_server/ap2ex1_server.csproj
@@ -48,10 +48,10 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="MazeGeneratorLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeGeneratorLib.dll</HintPath>
+      <HintPath>..\SearchableMaze\bin\Debug\MazeGeneratorLib.dll</HintPath>
     </Reference>
     <Reference Include="MazeLib">
-      <HintPath>..\..\..\..\Desktop\ap2\MazeLib.dll</HintPath>
+      <HintPath>..\SearchableMaze\bin\Debug\MazeLib.dll</HintPath>
     </Reference>
     <Reference Include="Priority Queue">
       <HintPath>..\packages\OptimizedPriorityQueue.4.0.4\lib\net45\Priority Queue.dll</HintPath>
